--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto Final M4 (Denuncie e busque ajuda)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node index.js"
   },
   "repository": {
     "type": "git",
