--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto Final M4 (Denuncie e busque ajuda)",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Davidf555/Projeto-Final-M4#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
